--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.0.1",
+    "jquery": "^3.0.0",
     "jspm": "^0.16.39",
     "webpack": "^1.13.1"
   },
