--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Yan Hongwei, Song Jiaming",
   "license": "MIT",
   "devDependencies": {
+    "angular": "^1.5.7",
     "brfs": "^1.4.3",
     "browserify": "^13.0.1",
     "jquery": "^3.0.0",
     "jspm": "^0.16.39",
+    "tether": "^1.3.2",
     "typeahead": "^0.2.2",
     "webpack": "^1.13.1"
   },
