--- a/data/2013Bachelor of Science (Applied Mathematics).json
+++ b/data/2013Bachelor of Science (Applied Mathematics).json
@@ -1,5 +1,6 @@
 {
 "name":"Bachelor of Science (Applied Mathematics)",
+"faculty":"SCIENCE",
 "type":"degree programme",
 "AY":2013,
 "updated":"02/07/2015",
